gccida/g1/gen_peephole2_1264
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_peephole2_1264/src/insn-emit.c:18353:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_REG( ( machine_mode)( ( *( ( _BYTE *)*operands + 2) == 5) + 4), v2); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_peephole2_1264/src/obj/insn-emit.o] Error 1
